contact submit button grows on hover, fixed outlines being square on mobile by changing them to box-shadow

--- a/src/Home.css
+++ b/src/Home.css
@@ -385,8 +385,7 @@
   color: gray;
   
   border: 4px solid rgb(113, 191, 240);
-  outline: 4px solid white;
-  outline-offset: 0px;
+  box-shadow: 0 0 0 4px white;
 }
 
 .contact__exit {
@@ -400,7 +399,7 @@
   padding: 2px;
   border-radius: 10000px;
   color: gray;
-  outline: 2px solid rgb(255, 255, 255);
+  border: 2px solid rgb(255, 255, 255);
   box-shadow: inset 0px 0px 30px 3px rgba(0, 0, 0, 0.229);
 
   transition: box-shadow ease-in-out 0.35s;
@@ -482,7 +481,7 @@
   position: absolute;
   z-index: 0;
   top: 2px;
-  left: 2px;
+  left: 0px;
   width: calc(100% - 4px);
   height: 50%;
   border-radius: 10px;
@@ -586,7 +585,7 @@
 
   color:rgb(73, 73, 73);
 
-  transition: box-shadow ease-in-out 0.35s;
+  transition: all ease-in-out 0.35s;
 }
 
 .contact__submit:after {
@@ -606,7 +605,9 @@
 .contact__submit:hover {
   cursor: pointer;
   box-shadow: 0px 0px 15px 10px rgba(159, 159, 159, 0),
-    inset 0px 0px 10px 40px rgba(35, 125, 173, 0.200);
+    inset 0px 0px 10px 30px rgba(35, 125, 173, 0.200);
+  width:calc(calc(2rem + 20vw) * 1.1);
+  height: calc(8vh * 1.1)
 }
 
 
